[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "comet_result_limit"
description = "Comet execution time in relation to `num_results`"
authors = [
    {name = "Dirk Winkelhardt", email="dirk.winkelhardt@rub.de"},
]
readme = "README.md"
requires-python = ">=3.11"
version = "1.0.0"
dependencies = [
    "plotly ~=5.16",
    "kaleido ~=0.2"
]

[project.optional-dependencies]
dev = [
    "pylint",
]


[project.urls]
repository = "https://github.com/di-hardt/comet-result-limit"


